Got the light/dark mode working on the blog homepage. Moved the javascript code for controlling the light/dark mode to the logic file and added the CSS stylings for the light/dark mode to the styles CSS file. Added javascript code on the blog.js file that sets sytles for the elements being created to display the blog posts. Also fixed the footer of the blog display page.

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -4,10 +4,17 @@
 }
     
 header {
-    text-align: right;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
     padding: 2% 1%;
     margin-bottom: 10px;
     border-bottom: 10px double black;
+}
+
+h4 {
+    text-align: center;
 }
 
 footer {
@@ -17,15 +24,10 @@ footer {
 }
 
 footer ul {
-    list-style-type: none;    
+    list-style-type: none;
+    margin: 10px;
 }
 
-.light {
-    background-color: white;
-    color: black;
-}
-
-.dark {
-    background-color: gray;
-    color: white;
+footer ul a {
+    text-decoration: none;
 }
